feat: improved planning grid and positions list

--- a/src/components/planning/planning.component.html
+++ b/src/components/planning/planning.component.html
@@ -48,7 +48,7 @@
               <!-- Target Allocation -->
               <div class="col-allocation">
                 <div class="input-wrapper">
-                  <input type="number" formControlName="targetPercentage" />
+                  <input type="number" formControlName="targetPercentage" min="0" step="0.01" />
                   <span class="unit">%</span>
                 </div>
                 <!-- Save Status Indicator -->
@@ -63,10 +63,10 @@
 
               <!-- Estimated Amount -->
               <div class="col-estimation">
-                <span class="label">Est.</span>
-                <span class="value">
-                  {{ (monthlyInvestmentControl.value * (rowGroup.get('targetPercentage')?.value || 0) / 100) | number:'1.0-0' }} €
-                </span>
+                <div class="input-wrapper">
+                  <input type="number" formControlName="targetAmount" min="0" step="0.01" />
+                  <span class="unit">€</span>
+                </div>
               </div>
 
               <!-- Frequency Toggles -->
